# hsr1

./: README.md
hsr1_description/: CMakeLists.txt  package.xml
hsr1_description/config/: joint_names_hsr1_description.yaml
hsr1_description/launch/: display.launch  gazebo.launch  urdf.rviz
hsr1_description/meshes/: base_link.STL  camera_link.STL  laser.STL  left_arm_base.STL  left_arm_jaw.STL  left_arm_lower.STL  left_arm_wrist.STL  lift_link.STL  right_arm_base.STL  right_arm_gripper.STL  right_arm_shoulder.STL  right_arm_upper.STL
hsr1_description/urdf/: hsr1_description.csv  hsr1_description.urdf
hsr1_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
hsr1_moveit_config/config/: fake_controllers.yaml  gazebo_hsr1_description.urdf  hsr1_description.srdf  joint_limits.yaml  ompl_planning.yaml  stomp_planning.yaml
hsr1_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  (+3 more)
hsr1_navigation/: CMakeLists.txt  package.xml
hsr1_navigation/launch/: hector_mapping.launch  hsr1_navigation.launch
hsr1_navigation/maps/: test.pgm  test.yaml
hsr1_navigation/param/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  local_planner_params.yaml  move_base_params.yaml
hsr1_navigation/rviz/: hsr1_navigation.rviz
